--- a/VScode Platformio/platformio.ini
+++ b/VScode Platformio/platformio.ini
@@ -17,5 +17,7 @@ lib_deps =
 	nrf24/RF24@^1.4.10
 	olikraus/U8g2@^2.36.2
 	adafruit/Adafruit NeoPixel@^1.12.3
+	bblanchon/ArduinoJson@^7.4.2
 board_build.partitions = min_spiffs.csv
 monitor_speed = 115200
+upload_port = /dev/cu.usbserial-0001
