--- a/VScode Platformio/platformio.ini
+++ b/VScode Platformio/platformio.ini
@@ -8,9 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; My Boards:
+; https://docs.platformio.org/en/latest/boards/espressif32/esp32-s3-devkitc-1.html
+
 [env:nyanbox-main]
 platform = espressif32
-board = esp32dev
+board = esp32-s3-devkitc-1
 framework = arduino
 build_flags = -Wl,-z,muldefs
 lib_deps =
@@ -19,12 +22,13 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.12.3
 	bblanchon/ArduinoJson@^7.4.2
 board_build.partitions = huge_app.csv
+board_build.mcu = esp32s3
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 
 [env:hardware-test]
 platform = espressif32
-board = esp32dev
+board = esp32-s3-devkitc-1
 framework = arduino
 lib_deps =
 	nrf24/RF24@^1.4.10
