--- a/firmware-files/manifest.json
+++ b/firmware-files/manifest.json
@@ -1,16 +1,16 @@
 {
-  "name": "nyanBOX",
+  "name": "tutuBOX",
   "version": "v4.11.6",
   "home_assistant_domain": "esphome",
-  "funding_url": "https://shop.nyandevices.com",
+  "funding_url": "https://shop.andersonbosa.github.io/tutuBOX",
   "new_install_prompt_erase": true,
   "builds": [
     {
       "chipFamily": "ESP32",
       "parts": [
-        { "path": "https://raw.githubusercontent.com/jbohack/nyanBOX/main/firmware-files/bootloader.bin", "offset": 4096 },
-        { "path": "https://raw.githubusercontent.com/jbohack/nyanBOX/main/firmware-files/partitions.bin", "offset": 32768 },
-        { "path": "https://raw.githubusercontent.com/jbohack/nyanBOX/main/firmware-files/firmware.bin", "offset": 65536 }
+        { "path": "https://raw.githubusercontent.com/andersonbosa/tutuBOX/main/firmware-files/bootloader.bin", "offset": 4096 },
+        { "path": "https://raw.githubusercontent.com/andersonbosa/tutuBOX/main/firmware-files/partitions.bin", "offset": 32768 },
+        { "path": "https://raw.githubusercontent.com/andersonbosa/tutuBOX/main/firmware-files/firmware.bin", "offset": 65536 }
       ]
     }
   ]
