--- a/tutuBOX/platformio.ini
+++ b/tutuBOX/platformio.ini
@@ -11,7 +11,7 @@
 ; My Boards:
 ; https://docs.platformio.org/en/latest/boards/espressif32/esp32-s3-devkitc-1.html
 
-[env:nyanbox-main]
+[env:tutubox-main]
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
