--- a/tutuBOX/platformio.ini
+++ b/tutuBOX/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nyanbox-main]
+[env:tutubox-main]
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
